syntax = "proto3";

package temporal.server.api.routing.v1;

option go_package = "go.temporal.io/server/api/routing/v1;routing";

import "google/protobuf/descriptor.proto";

extend google.protobuf.MethodOptions { optional RoutingOptions routing = 7234; }

message RoutingOptions {
    // Requests may specify how to obtain the namespace ID. Defaults to the "namespace_id" field.
    string namespace_id = 1;
    // Request will be routed by resolving the namespace ID and execution ID to a
    // given shard.
    string execution_id = 2;
}
